zmieniona liczność participation