@@ -51,15 +51,15 @@ public class CriminalOrganization {
         members.removeIf(member1 -> member1 == member);
     }
 
-//    @Override
-//    public String toString() {
-//        return "CriminalOrganization{" +
-//                "name='" + name + '\'' +
-//                ", business='" + business + '\'' +
-//                ", organizationStatus=" + organizationStatus +
-//                ", area=" + area.getName() +
-//                ", internationalStatus=" + internationalStatus +
-//                ", numberOfMembers=" + members.size() +
-//                '}';
-//    }
+    @Override
+    public String toString() {
+        return "CriminalOrganization{" +
+                "name='" + name + '\'' +
+                ", business='" + business + '\'' +
+                ", organizationStatus=" + organizationStatus +
+                ", area=" + area.getName() +
+                ", internationalStatus=" + internationalStatus +
+                ", numberOfMembers=" + members.size() +
+                '}';
+    }
 }
