@@ -5,6 +5,8 @@ import models.enums.OperationalGroupStatus;
 import java.util.HashMap;
 import java.util.Map;
 
+import static models.exceptions.ExceptionMessageProvider.GROUP_ID_TAKEN_MESSAGE;
+
 public class OperationalGroup {
     private static Map<String, OperationalGroup> groupIDs = new HashMap<>();
     private OperationalGroupStatus operationalGroupStatus;
@@ -17,12 +19,17 @@ public class OperationalGroup {
 
     private void setGroupID(String groupId) throws Exception {
         if (groupIDs.containsKey(groupId)) {
-            throw new Exception("The ID is taken");
+            throw new Exception(String.format(GROUP_ID_TAKEN_MESSAGE, groupId));
         } else groupIDs.put(groupId, this);
     }
 
     public void setVehicle(PoliceVehicle vehicle) {
-
+        if (this.vehicle != null) {
+            this.vehicle.setOperationalGroup(null);
+            this.vehicle = null;
+        }
+        this.vehicle = vehicle;
+        vehicle.setOperationalGroup(this);
     }
 
     @Override
