@@ -1,5 +1,0 @@
-package models.exceptions;
-
-public class TypeMessageHelper {
-    public static final String TYPE_ERROR_MESSAGE = "It's not an event of type: %s";
-}
